# mcstructure

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE(origin).md  LICENSE.md  LICENSE.txt  README.md  README_CN.md  README_DE.md  README_EN.md  examples.py  pyproject.toml  setup.py  upload.bat
TrimMCStruct/: __init__.py  main.py
_example_structures/: cmd_iron_air.mcstructure  cube_creates.mcstructure
docs/: .buildinfo  api.md  changelog.md  conf.py  contributing.md  index.html  index.md  installation.md  license.md  mcstructure文件结构.md  objects.inv  quickstart.md
docs/_static/: documentation_options.js
docs_source/source/: conf.py  index.rst
docs_src/: Makefile
docs_src/source/: conf.py  index.rst
examples/: README.md  area.py  awe.mcstructure  copystruct.py  create.py  cube_const.mcstructure  custom_entity.py  diagonal.py  dirt_house.mcstructure  example_result.mcstructure  read_and_display.py  rotate.py  simple.py  waterlogged.py
examples/pack/: README.md  makepack.py
examples/pack/src/: manifest.json
examples/structures/: barrel.mcstructure  cmdblock.mcstructure  created_with_python.mcstructure
mcstructure/: __init__.py  main.py
samples/: armor_stand_steve_head.mcstructure  caged_villager.mcstructure  large_nether.mcstructure  scarecrow.mcstructure  waterlogged.mcstructure
scripts/: packer.py
src/: mcstructure.py
src/mcstructure/: __init__.py
tests/: nbt_seeker.py  test_block.py  test_structure.py
